--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
 	padding : 15px;
 	text-align: center;
 }
-.Latest-news-section{
+.latest-news-section{
 	background-color: #FFFEFF;
 	width : 30%;
 	border-radius : 10px;
